--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: TimeCommander
 main: LDX\TimeCommander\Main
-version: 2.1
-api: [1.0.0, 2.0.0]
+version: 2.1-ALPHA8
+api: [3.0.0-ALPHA8]
 author: LDX
 load: POSTWORLD
 website: https://github.com/LDX-MCPE/TimeCommander
