--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,6 +1,6 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/LDX-MCPE/TimeCommander
 branches:
-- master
+- patch-1
 projects:
   TimeCommander:
     path: ""
