--- a/resources/config.yml
+++ b/resources/config.yml
@@ -4,9 +4,5 @@
 # Command: Command to execute;
 # Time: Amount of time in minutes between command executions;
 Commands:
-  - Command: say I made my server awesome with TimeCommander!
-    Time: 5
-  - Command: say LDX is awesome!
-    Time: 10
-  - Command: reload
-    Time: 1440
+  - Command: koth start
+    Time: 10080
